--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -16,24 +16,36 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-The IRI Scoreboard for data on innovation, managed by the European Commission, lists Research and Development investments made by the world’s 1,000 top investor companies.This scientific project carried out within the Directorate B: Growth and Innovation, one of the seven scientific institutes of the European Commission's Joint Research Centre (JRC).
+iriR's objective is to allow an easy connection with R to the European Commission's Industrial R&D Investment Scoreboard (IRI).
+ 
+The yearly IRI Scoreboard for company-level data on innovation lists Research and Development investments made by the world’s 1,000 top investor companies. This scientific project carried out within the Directorate B of Growth and Innovation, one of the seven scientific institutes of the European Commission's Joint Research Centre (JRC).
 
-The IRI aims at providing robust data and analysis on the contribution of private-sector R&D to sustainable competitiveness and "prosperity" in the EU.  With iriR, we want to make easily available the IRI's data and modestly help the European Commission in achieving its goals, such as open the data to EU policy-makers, academia, and other institutional and economic actors.
+The IRI scoreboard aims at providing robust data and analysis on the contribution of private-sector R&D to sustainable competitiveness and "prosperity" in the EU.  With iriR, we want to make easily available the IRI's data. We have also compiled the yearly scoreboards through time to create a cross-section time-series dataset. Researchers and analysts have access to more then 7,500 innovative companies across the world, which are or have been part of the top 1,000 innovative companies.
 
-Through our R package, people can see the six parameters that composed the global IRI's data on R&D : Country, Year, Company's name, Industry, Indicator and Company's rank.
+Through our R package, people can see the six parameters that composed the global IRI scoreboard's data on R&D : Country, Year, Company's name, Industry, Indicator and Company's rank.
 
-To learn more about IRI and follow the work of the European Commission, please visit this [page](https://iri.jrc.ec.europa.eu/home/). To see a definition of the indicators, please visit this [page](https://iri.jrc.ec.europa.eu/sites/default/files/2019-12/SB2019_Final_18Dec2019_0.pdf). See below to have access through iriR to the whole list of indicators,industries, companies and countries.
+To see a definition of the indicators, please visit this [page](https://iri.jrc.ec.europa.eu/sites/default/files/2019-12/SB2019_Final_18Dec2019_0.pdf). See below to access  to the whole list of indicators, industries, companies and countries.
 
+For more information about IRI, please visit this [page](https://iri.jrc.ec.europa.eu/home/).
 
 ## Installation
 
-You can install the current development version of 'iriR' with:
+Installation from CRAN:
+
+```{r}
+install.packages("iriR")
+```
+
+
+You can install the latest development version of 'iriR' with devtools:
 
 ```{r, eval = FALSE}
 devtools::install_github("warint/iriR")
 ```
 
-```{r, echo=FALSE}
+Then, test your installation with: 
+
+```{r,echo=FALSE}
 library(iriR)
 ```
 
@@ -42,7 +54,7 @@ library(iriR)
 
 ### Step 1: Getting the country's ISO code
 
-A user needs to enter the ISO code of a country. To have access to this code, the following function provides this information.
+A user needs to enter a country's ISO code. To have access to this code, the following function provides this information:
 
 ```{r, eval = FALSE}
 irir_country() # A list of all countries will be produced
@@ -54,7 +66,7 @@ irir_country("Canada") # The ISO code for Canada will be produced
 
 ### Step 2: Getting the indicator's code
 
-A user needs to enter the code of the desired indicator. To do so, the following function provides access to all the indicators of interest.
+A user needs to enter the code of the desired indicator. To do so, the following function provides access to all the indicators of interest:
 
 ```{r, eval = FALSE}
 irir_indicator() # A list of all indicators will be produced
@@ -66,19 +78,19 @@ irir_indicator("sales") # A list with all the variables including "sales" will b
 
 ### Step 3: Getting the company' name
 
-A user needs to enter the name of the desired company. To do so, the following function provides access to all the companies of interest.
+A user needs to enter the name of the desired company. To do so, the following function provides access to all the companies of interest:
 
 ```{r, eval = FALSE}
 irir_company() # A list of all companies will be produced
 
 irir_company(company = "Samsung") # A list with all the variables including "Samsung" will be produced
 
-irir_company("Samsung") # A list with all the variables including "Samsung" will be produced
+irir_indicator("Samsung") # A list with all the variables including "Samsung" will be produced
 ```
 
 ### Step 4: Getting the industry' name
 
-A user needs to enter the name of the desired industry. To do so, the following function provides access to all the industries of interest.
+A user needs to enter the name of the desired industry. To do so, the following function provides access to all the industries of interest:
 
 
 ```{r, eval = FALSE}
@@ -107,36 +119,36 @@ irir_data() # It generates a data frame of the complete dataset
 
 ## Create visuals with irir_visual
 
-irir_visual fonction allows to create three type of visuals from the IRI Scoreboard for data on innovation : barcharts, linecharts and pointcharts.
+irir_visual fonction allows to create three types of visuals from the IRI Scoreboard for data on innovation : barcharts, linecharts and pointcharts.
 
-By default, graphs will illustrate top 5 countries and Canada. 
+By default, graphs will illustrate the top 5 countries and Canada. 
 
-However, users can modify the graphs as they wish with these arguments :
+However, users can modify the graphs as they wish with these arguments:
 
 **Country**
 
-- From the ISO codes provided by the irir_country() function, users can can choice which country they want to add to the top 5 or make it appear.
+- From the ISO codes provided by the irir_country() function, users can select which country they want to add to the top 5 
 
-- If there is no country code but an empty argument, only top 5 will appear.
+- If there is no country code but an empty argument, only the top 5 will appear.
 
 **Chart**
 
-- Each chart illustrates a different data from the IRI Scoreboard
-  - bar_1 : Number of leading companies in R&D for the most represented countries
-  - bar_2 : Number of leading companies in R&D per 100 billion $US of GDP for the most represented countries
-  - bar_3 : R&D expenditures of the leading companies for the most represented countries
-  - line_1 : Evolution as regards the number of leading companies in R&D for the most represented countries
-  - line_2 : Evolution as regards the number of leading companies in R&D per 100 billion $US of GDP for
-  - line_3 : Evolution as regards R&D expenditures of the leading companies for the the most represented countries
-  - line_4 : Evolution as regards the number of leading companies in R&D & the total of their R&D investments (in millions of $US)")
-  - line_5 : Evolution as regards the percentage of R&D investments made by companies of the total R&D investments."
-  - line_6 : Evolution as regards the R&D per employee in $US
-  - point_1 : Net sales/R&D investment ratio per total R&D investment for the the most represented countries
+- Each chart illustrates a different data from the IRI Scoreboard:
+  - bar_1 : Number of leading companies in R&D for the most represented countries,
+  - bar_2 : Number of leading companies in R&D per 100 billion $US of GDP for the most represented countries,
+  - bar_3 : R&D expenditures of the leading companies for the most represented countries,
+  - line_1 : Evolution of the number of leading companies in R&D for the most represented countries,
+  - line_2 : Evolution of the number of leading companies in R&D per 100 billion $US of GDP,
+  - line_3 : Evolution of R&D expenditures of the leading companies for the the most represented countries,
+  - line_4 : Evolution of the number of leading companies in R&D including their total R&D investments (in millions of $US)"),
+  - line_5 : Evolution of the percentage of R&D investments made by companies out of the overall sample's total R&D investments,
+  - line_6 : Evolution of the R&D per employee in $US,
+  - point_1 : Net sales/R&D investment ratio per total R&D investments for the the most represented countries.
   
 **Years**  
 
-- Allows you to choose which year will be used in the chart. If no year is set, the latest available will be used. 
-
+- Choose which year will be used in the chart. If no year is set, the latest available will be used. 
+- It only works with barcharts.
 
 ### Barcharts
 
