--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -30,17 +30,17 @@ For more information about the IRI Scoreboard, please visit this [page](https://
 
 ## Installation
 
-Installation from CRAN:
+Installation from CRAN using:
 
-```{r}
+```{r, eval = FALSE}
 install.packages("iriR")
 ```
 
-
-You can install the latest development version of 'iriR' with devtools:
+You can install the latest development version of 'iriR' with remotes as follows:
 
 ```{r, eval = FALSE}
-devtools::install_github("warint/iriR")
+install.packages("remotes")
+remotes::install_github("warint/iriR")
 ```
 
 Then, test your installation with: 
@@ -48,7 +48,6 @@ Then, test your installation with:
 ```{r,echo=FALSE}
 library(iriR)
 ```
-
 
 ## How-To
 
