--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ iriR's objective is to provide an easy connection through the R language to the 
  
 The yearly IRI Scoreboard for company-level data on innovation lists Research and Development investments made by the world's 1,000 top investor companies. This scientific project is carried out within the Directorate B of Growth and Innovation, one of the seven scientific institutes of the European Commission's Joint Research Centre (JRC).
 
-The IRI Scoreboard aims at providing robust data and analyses on the contribution of private-sector R&D to sustainable competitiveness and "prosperity".  With iriR, we want to make the IRI Scoreboard's data readily available. We have also compiled the yearly scoreboards through time to create a cross-section time-series dataset. Researchers and analysts have access to more than 7,500 innovative companies worldwide, which are or have been part of the top 1,000 innovative companies.
+The IRI Scoreboard aims at providing robust data and analyses on the contribution of private-sector R&D to sustainable competitiveness and "prosperity".  With iriR, we want to make the IRI Scoreboard's data readily available. We have also compiled the yearly scoreboards through time to create a cross-section time-series dataset. Researchers and analysts have access to more than 7,500 innovative companies worldwide, which are or have been part of the top 1,000 innovative companies..
 
 Through our R package, researchers and analysts can access the six parameters composing the global IRI scoreboard's data on R&D: Country, Year, Company's name, Industry, Indicator and Company's rank.
 
