--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 
 
 <!-- badges: start -->
-[![Travis build status](https://travis-ci.org/warint/iriR.svg?branch=master)](https://travis-ci.org/warint/iriR)
+[![Build Status](https://travis-ci.com/warint/iriR.svg?branch=master)](https://travis-ci.com/warint/iriR)
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/warint/iriR?branch=master&svg=true)](https://ci.appveyor.com/project/warint/iriR)
 [![](http://cranlogs.r-pkg.org/badges/grand-total/iriR?color=blue)](https://cran.r-project.org/package=iriR)
 [![CRAN status](https://www.r-pkg.org/badges/version/iriR)](https://CRAN.R-project.org/package=iriR)
